Logo, Restaurar base de datos Falata la alta de vntas y detalles menores

--- a/ventana.ui
+++ b/ventana.ui
@@ -42,7 +42,7 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout_7">
-    <item row="3" column="4">
+    <item row="5" column="4">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -58,33 +58,7 @@
       </property>
      </spacer>
     </item>
-    <item row="3" column="6">
-     <widget class="QLabel" name="lblstatus">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="7">
-     <spacer name="horizontalSpacer_4">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Expanding</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="2" column="0">
+    <item row="4" column="0">
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -100,7 +74,33 @@
       </property>
      </spacer>
     </item>
-    <item row="3" column="7">
+    <item row="5" column="6">
+     <widget class="QLabel" name="lblstatus">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="7">
+     <spacer name="horizontalSpacer_4">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="5" column="7">
      <widget class="QLabel" name="lblstatusdate">
       <property name="maximumSize">
        <size>
@@ -116,7 +116,7 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="6" rowspan="3">
+    <item row="4" column="5">
      <widget class="QTabWidget" name="TabWidget">
       <property name="enabled">
        <bool>true</bool>
@@ -143,7 +143,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="tabBarAutoHide">
        <bool>false</bool>
@@ -1658,6 +1658,16 @@
       </widget>
      </widget>
     </item>
+    <item row="0" column="6">
+     <widget class="QLabel" name="lbllogo">
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="img/logo.qrc">:/logo/logo.png</pixmap>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -1825,6 +1835,7 @@
  </widget>
  <resources>
   <include location="img/calendario.qrc"/>
+  <include location="img/logo.qrc"/>
   <include location="img/cancelar.qrc"/>
   <include location="img/toolBarPrinter.qrc"/>
   <include location="img/toolabrirDir.qrc"/>
@@ -1837,11 +1848,11 @@
  </resources>
  <connections/>
  <buttongroups>
+  <buttongroup name="grpbtnSex"/>
   <buttongroup name="grpbtnPay">
    <property name="exclusive">
     <bool>false</bool>
    </property>
   </buttongroup>
-  <buttongroup name="grpbtnSex"/>
  </buttongroups>
 </ui>
